fix: remove box stretching

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -219,7 +219,7 @@
 		display: grid;
 		column-gap: 8px;
 		grid-template-columns: 30px 1fr;
-		grid-template-rows: repeat(2, 1fr);
+		grid-template-rows: auto;
 		width: 100%;
 
 		&--block {
